--- a/configuration.properties
+++ b/configuration.properties
@@ -1,4 +1,4 @@
 
 # type of browser
-browser=chrome 
-automationexercise=https://openmrs.org/
+browser=chrome
+NopCommerce=https://demo.nopcommerce.com/
