--- a/configuration.properties
+++ b/configuration.properties
@@ -1,5 +1,7 @@
 
 # type of browser
-browser=chrome
+browser=firefox
+
 automationexercise=https://openmrs.org/
+
 nopcommerce=https://demo.nopcommerce.com/
