--- a/configuration.properties
+++ b/configuration.properties
@@ -1,7 +1,5 @@
 
 # type of browser
-browser=firefox
-
+browser=chrome
 automationexercise=https://openmrs.org/
-
 nopcommerce=https://demo.nopcommerce.com/
